--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,8 +5,8 @@ name: Python application
 
 on:
   schedule:
-    - cron: '30 5,17 * * *'
-    # - cron: '*/1 * * * *'
+    # - cron: '30 5,17 * * *'
+    - cron: '*/1 * * * *'
 
 permissions:
   contents: read
