--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,8 +6,8 @@ name: Python application
 on:
   workflow_dispatch:
   schedule:
-    # - cron: '30 5,17 * * *'
-    - cron: '*/1 * * * *'
+    - cron: '30 5,17 * * *'
+    # - cron: '*/1 * * * *'
 
 permissions:
   contents: read
@@ -27,11 +27,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        
     - name: Prepare chromedriver
       uses: nanasess/setup-chromedriver@v2
+
     - name: dailyMission
       env:
         USERNAME: ${{ secrets.USERNAME }}
         PASSWORD: ${{ secrets.PASSWORD }}
       run: |
+        # sudo cp -p ./chromedriver /usr/bin/
+        # chmod -R 777 /usr/bin/chromedriver
         python dailyMission.py
