--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,7 +4,11 @@
 name: Python application
 
 on:
+  push:
+    branches: [ main ]
+  
   workflow_dispatch:
+
   schedule:
     - cron: '30 5,17 * * *'
     # - cron: '*/1 * * * *'
@@ -19,15 +23,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
+        pip install --upgrade pip
+        pip install -r ./requirements.txt
+
     - name: Prepare chromedriver
       uses: nanasess/setup-chromedriver@v2
 
@@ -36,6 +42,4 @@ jobs:
         USERNAME: ${{ secrets.USERNAME }}
         PASSWORD: ${{ secrets.PASSWORD }}
       run: |
-        # sudo cp -p ./chromedriver /usr/bin/
-        # chmod -R 777 /usr/bin/chromedriver
         python dailyMission.py
