添加发生异常发送邮件功能

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,5 +39,7 @@ jobs:
       env:
         USERNAME: ${{ secrets.USERNAME }}
         PASSWORD: ${{ secrets.PASSWORD }}
+        MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
+        MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
       run: |
         python dailyMission.py
