--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,9 +7,9 @@ on:
   push:
     branches: [ main ]
 
-  # schedule:
-  #   - cron: '0 16 * * *'
-  #   - cron: '0 6 * * *'
+  schedule:
+    - cron: '0 16 * * *'
+    - cron: '0 6 * * *'
     # - cron: '*/1 * * * *'
 
 permissions:
