更改运行逻辑

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,4 +48,4 @@ jobs:
         MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
         MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
       run: |
-        python dailyMission.py
+        python dailyMission.py --headless
