--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -52,7 +52,6 @@ jobs:
         python dailyMission.py --headless
 
     - name: dailyMission for USER2 (if set)
-      if: ${{ secrets.USERNAME1 != '' && secrets.PASSWORD1 != '' }}
       env:
         USERNAME: ${{ secrets.USERNAME1 }}
         PASSWORD: ${{ secrets.PASSWORD1 }}
@@ -60,4 +59,8 @@ jobs:
         MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
         API_KEY: ${{ secrets.API_KEY }}
       run: |
-        python dailyMission.py --headless
+        if [ -n "$USERNAME" ] && [ -n "$PASSWORD" ]; then
+          python dailyMission.py --headless
+        else
+          echo "Skipping USER2: USERNAME or PASSWORD not set."
+        fi
